Closer but still doesn't work

--- a/app/views/signup/index.html.haml
+++ b/app/views/signup/index.html.haml
@@ -1,5 +1,6 @@
 %html
   %body{'ng-app' => 'SignupModule'}
   %div{'ng-controller' => 'ViewAllController'}
+    = link_to('/view_all', '/Restaurants')
     = link_to('/view', '/Restaurant/1')
     %div{'ng-view' => true}
